<resources>
    <string name="app_name">iLearn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Baby Junior</string>
    <string name="nav_header_subtitle">baby.junior@eg.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_grade">Grade</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_faqs">FAQs</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">LogOut</string>
    <string name="todo">todo</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account"><u>Don\'t have an account?</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account"><u>Already have an account?</u></string>
    <string name="numbers">Numbers</string>
    <string name="enter_email">Enter Email</string>
    <string name="request_password">Request Password</string>

    <string-array name="slides">
        <item>Choose slide</item>
        <item>Slide 1</item>
        <item>Slide 2</item>
        <item>Slide 3</item>
        <item>Slide 4</item>
        <item>Slide 5</item>
        <item>Slide 6</item>
        <item>Slide 7</item>
        <item>Slide 8</item>
    </string-array>
</resources>
