<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/loginhome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.SignUp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:background="@drawable/signhome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/editors"
            android:orientation="vertical"
            android:layout_marginTop="150dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/user_name"
                    android:drawableLeft="@drawable/user"
                    android:background="@drawable/edit_border"
                    android:id="@+id/name"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:drawableStart="@drawable/user" />
                <EditText
                    android:layout_marginTop="20dp"
                    android:hint="@string/email"
                    android:drawableLeft="@drawable/user"
                    android:background="@drawable/edit_border"
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:drawableStart="@drawable/user" />
                <EditText
                    android:layout_marginTop="20dp"
                    android:hint="@string/password"
                    android:drawableLeft="@drawable/pass"
                    android:background="@drawable/edit_border"
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:drawableStart="@drawable/pass" />
                <EditText
                    android:layout_marginTop="20dp"
                    android:hint="@string/confirm_password"
                    android:drawableLeft="@drawable/pass"
                    android:background="@drawable/edit_border"
                    android:id="@+id/cpassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:drawableStart="@drawable/pass" />
        </LinearLayout>
        <Button
            android:text="@string/register"
            android:id="@+id/regbtn"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            android:onClick="loginPage"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:id="@+id/txtAccount"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            android:text="@string/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Gotologin"
            />

    </LinearLayout>

</RelativeLayout>